# alfred-markdown-searcher

./: Cargo.toml  README.md
src/: main.rs  markdown.rs
